fixed title and x overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ body {
   height: 100%;
   background-color: #4C8EFA;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .noselect {
